syntax = "proto3";

package bloxtr8.escrow.commands.v1;

// Escrow Commands
// Commands for escrow state transitions

// Command to create a new escrow instance
message CreateEscrow {
  string escrow_id = 1;              // CUID, generated by API Gateway
  string contract_id = 2;            // Contract that triggered escrow
  string buyer_id = 3;               // User ID of buyer
  string seller_id = 4;              // User ID of seller
  string currency = 5;               // "USD" | "USDC"
  int64 amount_cents = 6;            // Amount in cents (for USD) or smallest unit
  string network = 7;                // "BASE" (for USDC, empty for USD)
  string event_id = 8;               // Unique event ID for idempotency
  string trace_id = 9;               // Distributed tracing ID
  string causation_id = 10;          // ContractExecuted event ID
  string correlation_id = 11;        // Request correlation ID
  string version = 12;               // "v1"
}

// Command to mark escrow as delivered by seller
message MarkDelivered {
  string escrow_id = 1;              // Escrow to mark as delivered
  string actor_id = 2;               // User ID of seller (must match escrow.seller_id)
  string event_id = 3;               // Unique event ID for idempotency
  string trace_id = 4;               // Distributed tracing ID
  string causation_id = 5;           // API request ID
  string correlation_id = 6;         // Request correlation ID
  string version = 7;                // "v1"
}

// Command to release funds to seller
message ReleaseFunds {
  string escrow_id = 1;              // Escrow to release
  string actor_id = 2;               // User ID of buyer (must match escrow.buyer_id)
  string event_id = 3;               // Unique event ID for idempotency
  string trace_id = 4;               // Distributed tracing ID
  string causation_id = 5;           // API request ID
  string correlation_id = 6;         // Request correlation ID
  string version = 7;                // "v1"
}

// Command to cancel escrow (timeout or manual cancellation)
message CancelEscrow {
  string escrow_id = 1;              // Escrow to cancel
  string reason = 2;                 // "TIMEOUT" | "BUYER_CANCELLED" | "SELLER_CANCELLED" | "ADMIN"
  string actor_id = 3;               // User ID of canceller (empty for TIMEOUT)
  string event_id = 4;               // Unique event ID
  string trace_id = 5;               // Distributed tracing ID
  string causation_id = 6;           // Triggering event ID
  string correlation_id = 7;         // Request correlation ID
  string version = 8;                // "v1"
}

// Command to raise a dispute
message RaiseDispute {
  string escrow_id = 1;              // Escrow to dispute
  string actor_id = 2;               // Buyer or seller user ID
  string reason = 3;                 // Dispute reason/description
  string event_id = 4;               // Unique event ID for idempotency
  string trace_id = 5;               // Distributed tracing ID
  string causation_id = 6;           // API request ID
  string correlation_id = 7;         // Request correlation ID
  string version = 8;                // "v1"
}

// Command to resolve a dispute
message ResolveDispute {
  string escrow_id = 1;              // Escrow to resolve
  string actor_id = 2;               // Admin user ID
  string resolution = 3;             // "RELEASE" | "REFUND"
  string reason = 4;                 // Resolution reason
  string event_id = 5;               // Unique event ID for idempotency
  string trace_id = 6;               // Distributed tracing ID
  string causation_id = 7;           // Triggering event ID
  string correlation_id = 8;         // Request correlation ID
  string version = 9;                // "v1"
}

